--- a/navigation.html
+++ b/navigation.html
@@ -35,7 +35,7 @@ body {font-family: "Lato", sans-serif}
   <div class="w3-dropdown-hover w3-hide-small">
     <button class="w3-padding-large w3-button" title="Archive">ARCHIVE<i class="fa fa-caret-down"></i></button>
     <div class="w3-dropdown-content w3-bar-block w3-card-4">
-      <a href="/org/scf/archive/1718.html" class="w3-bar-item w3-button">2017-2018</a>
+      <!-- <a href="/org/scf/archive/1718.html" class="w3-bar-item w3-button">2017-2018</a> -->
       <a href="/org/scf/archive/1617.html" class="w3-bar-item w3-button">2016-2017</a>
       <a href="/org/scf/archive/1516.html" class="w3-bar-item w3-button">2015-2016</a>
     </div>
