--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
   <div id="header">
     <div id="navigation">
       <a href="/org/scf/">HOME</a>
-      <a href="/org/scf/about">ABOUT</a>
-      <a href="/org/scf/weekly">WEEKLY EVENTS</a>
-      <a href="/org/scf/retreats">RETREATS</a>
-      <a href="/org/scf/contact">CONTACT</a>
+      <a href="/org/scf/about.html">ABOUT</a>
+      <a href="/org/scf/weekly.html">WEEKLY EVENTS</a>
+      <a href="/org/scf/retreats.html">RETREATS</a>
+      <a href="/org/scf/contact.html">CONTACT</a>
       <a href="/org/scf/photos">PHOTOS</a>
       <a href="/org/scf/archive">ARCHIVE</a>
     </div>
