--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html" charset="UTF-8">
   <title>About SCF</title>
-  <link rel="stylesheet" type="text/css" href="/styles/default.css">
+  <link rel="stylesheet" type="text/css" href="/org/scf/styles/default.css">
 </head>
 
 <body>
