condense navbar, style, about

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <div id="navigation">
       <a href="/org/scf/">HOME</a>
       <a href="/org/scf/about.html">ABOUT</a>
-      <a href="/org/scf/weekly.html">WEEKLY EVENTS</a>
+      <a href="/org/scf/weekly.html">WEEKLY</a>
       <a href="/org/scf/retreats.html">RETREATS</a>
-      <a href="/org/scf/contact.html">CONTACT</a>
-      <a href="/org/scf/photos">PHOTOS</a>
+      <a href="/org/scf/history.html">HISTORY</a>
       <a href="/org/scf/archive">ARCHIVE</a>
+      <a href="/org/scf/photos">PHOTOS</a>
     </div>
   </div>
   <!-- End header content -->
