who we are, iv info, contact info

--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
       <a href="/org/scf/about.html">ABOUT</a>
       <a href="/org/scf/weekly.html">WEEKLY</a>
       <a href="/org/scf/retreats.html">RETREATS</a>
-      <a href="/org/scf/history.html">history</a>
+      <a href="/org/scf/history.html">HISTORY</a>
       <a href="/org/scf/archive">ARCHIVE</a>
       <a href="/org/scf/photos">PHOTOS</a>
     </div>
@@ -33,7 +33,7 @@
     <a id="who"></a>
     <p><h1>WHO WE ARE</h1></p>
     <p>
-      blah
+      Welcome to Swarthmore Christian Fellowship. We are an evangelical, multi-denominational undergraduate campus ministry. We invite you to come learn with us about Christianity and share the Gospel of Jesus Christ with the campus.
     </p>
 
     <a id="sofaith"></a>
@@ -79,11 +79,29 @@
 
     <a id="iv"></a>
     <p><h1>AFFILIATION WITH INTERVARSITY USA</h1></p>
-    <p>We are a chapter of InterVarsity Christian Fellowship USA. You can read more</p>
+    <p>
+      We are a chapter of <a href="https://intervarsity.org/about-us/our-purpose">InterVarsity Christian Fellowship USA</a>, which is an inter-denominational national organization that is part of the Internationl Fellowship of Evangelical Students. Our statement of faith is inherited from IVCF. We receive mentorship from IVCF and we regularly attend retreats with other IVCF campuses in our region.<br/>
+      <br/>
+      We are located in <a href="https://ivsubphilly.com/about-us/our-team/">Eastern Pennsylvania</a>, within the <a href="http://midatlantic.intervarsity.org/regional-mission/">Mid-Atlantic region</a>. Our campus staff minister is Ms. Lindsey McAleese, who joined us in Fall 2018.<br/>
+    </p>
 
     <a id="contact"></a>
     <p><h1>CONTACT INFO</h1>
-    <p>blah</p>
+    <p>Fall 2018:</p>
+    <ul>
+      <li><b>Large Group:</b> musician and fake chemist Jeffrey Zhou '19 (jzhou4)</li>
+      <br/>
+      <li><b>Open Small Group:</b> idk</li>
+      <br/>
+      <li><b>Prayer Gatherings:</b> the lovely Juhyae Kim '19 (jkim16)</li>
+      <br/>
+      <li><b>General information, events, other:</b> idk</li>
+      <br/>
+      <li><b>Funding subsidies:</b> idk</li>
+      <br/>
+      <li><b>Peripateo Journal of Christian Discourse:</b> biblical scholar Tobias Philip '20 (tphilip1?)</li>
+      <br/>
+    </ul>
 
   </div>
   <!-- End page Content -->
