--- a/index.html
+++ b/index.html
@@ -31,6 +31,36 @@
     <p>welcome new freshmen i guess</p>
     <p>hello 2022</p>
     <p>goodbye 2019</p>
+    <p>welcome 2 swathmoar!!!1!</p>
+  </div>
+
+  <div class="Slideshow">
+    <img src="/org/scf/photos/16_17/chapter17_tree.jpg" style="width:100%" title="">
+    <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
+      <p>Chapter Camp 2017</p>
+      <p>May 13-19, 2017</p>
+    </div>
+  </div>
+  <div class="Slideshow">
+    <img src="/org/scf/photos/16_17/chapter17_woods.jpg" style="width:100%" title="">
+    <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
+      <p>Chapter Camp 2017</p>
+      <p>May 13-19, 2017</p>
+    </div>
+  </div>
+  <div class="Slideshow">
+    <img src="/org/scf/photos/16_17/banquet17_funny.jpg" style="width:100%" title="">
+    <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
+      <p>Welcoming Banquet 2017</p>
+      <p>March 25, 2017</p>
+    </div>
+  </div>
+  <div class="Slideshow">
+    <img src="/org/scf/photos/16_17/easter17.jpg" style="width:100%" title="">
+    <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
+      <p>Easter Dinner 2017</p>
+      <p>April 17, 2017</p>
+    </div>
   </div>
   <!-- End page Content -->
 
@@ -38,6 +68,27 @@
   <div id="footer">
   </div>
   <!-- End footer content -->
+
+
+  <!-- carousel script -->
+  <script>
+  var index = 0;
+  carousel();
+
+  // changes image every 4 seconds
+  function carousel() {
+      var i;
+      var x = document.getElementsByClassName("Slideshow");
+      for (i = 0; i < x.length; i++) {
+         x[i].style.display = "none";
+      }
+      index++;
+      if (index > x.length) {index = 1} // go back to the first image
+      x[index-1].style.display = "block";
+      setTimeout(carousel, 4000);
+  }
+  </script>
+  <!-- End carousel script -->
 
 </body>
 </html>
