unified navigation bar

--- a/about.html
+++ b/about.html
@@ -4,35 +4,29 @@
   <meta http-equiv="Content-Type" content="text/html" charset="UTF-8">
   <title>About SCF</title>
   <link rel="stylesheet" type="text/css" href="/org/scf/styles/default.css">
+
+  <!-- Navigation bar -->
+  <script
+      src="https://code.jquery.com/jquery-3.3.1.js"
+      integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+      crossorigin="anonymous">
+  </script>
+  <script>
+  $(function(){
+    $("#header").load("header.html");
+    $("#footer").load("footer.html");
+  });
+  </script>
+
 </head>
 
 <body>
   <!-- Header content -->
   <div id="header">
-    <div id="navigation">
-      <a href="/org/scf/">HOME</a>
-      <a href="/org/scf/about.html">ABOUT</a>
-      <a href="/org/scf/weekly.html">WEEKLY</a>
-      <a href="/org/scf/retreats.html">RETREATS</a>
-      <a href="/org/scf/history.html">HISTORY</a>
-      <a href="/org/scf/archive">ARCHIVE</a>
-      <a href="/org/scf/photos">PHOTOS</a>
-    </div>
   </div>
-  <!-- End header content -->
 
   <!-- Page content -->
   <div id="content">
-<<<<<<< HEAD
-    <h1>Jump to:</h1>
-=======
-    <!-- <b>Jump to:</b>
->>>>>>> 48836de395cdb2d9be331686769ce227b7071d16
-    <p><a href="#who">Who we are</a><br>
-      <a href="#sofaith">Statement of Faith</a><br>
-      <a href="#iv">Affiliation with InterVarsity</a><br>
-      <a href="contact">Contact info</a><br>
-    </p> -->
 
     <a id="who"></a>
     <p><h1>WHO WE ARE</h1></p>
@@ -89,31 +83,11 @@
       We are located in <a href="https://ivsubphilly.com/about-us/our-team/">Eastern Pennsylvania</a>, within the <a href="http://midatlantic.intervarsity.org/regional-mission/">Mid-Atlantic region</a>. Our campus staff minister is Ms. Lindsey McAleese, who joined us in Fall 2018.<br/>
     </p>
 
-    <a id="contact"></a>
-    <p><h1>CONTACT INFO</h1>
-    <p>Fall 2018:</p>
-    <ul>
-      <li><b>Large Group:</b> musician and fake chemist Jeffrey Zhou '19 (jzhou4)</li>
-      <br/>
-      <li><b>Open Small Group:</b> idk</li>
-      <br/>
-      <li><b>Prayer Gatherings:</b> the lovely Juhyae Kim '19 (jkim16)</li>
-      <br/>
-      <li><b>General information, events, other:</b> idk</li>
-      <br/>
-      <li><b>Funding subsidies:</b> idk</li>
-      <br/>
-      <li><b>Peripateo Journal of Christian Discourse:</b> biblical scholar Tobias Philip '20 (tphilip1?)</li>
-      <br/>
-    </ul>
-
   </div>
-  <!-- End page Content -->
 
   <!-- Footer content -->
   <div id="footer">
   </div>
-  <!-- End footer content -->
 
 </body>
 </html>
