--- a/retreats.html
+++ b/retreats.html
@@ -4,40 +4,28 @@
   <meta http-equiv="Content-Type" content="text/html" charset="UTF-8">
   <title>Retreats SCF</title>
   <link rel="stylesheet" type="text/css" href="/org/scf/styles/default.css">
-</head>
+
+  <!-- Navigation bar -->
+  <script
+      src="https://code.jquery.com/jquery-3.3.1.js"
+      integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+      crossorigin="anonymous">
+  </script>
+
+  <script>
+  $(function(){
+    $("#header").load("header.html");
+    $("#footer").load("footer.html");
+  });
+  </script>
 
 <body>
   <!-- Header content -->
   <div id="header">
-    <div id="navigation">
-      <a href="/org/scf/">HOME</a>
-      <a href="/org/scf/about.html">ABOUT</a>
-<<<<<<< HEAD
-      <a href="/org/scf/weekly.html">WEEKLY EVENTS</a>
-      <a href="/org/scf/retreats.html">RETREATS</a>
-      <a href="/org/scf/contact.html">CONTACT</a>
-      <a href="/org/scf/photos">PHOTOS</a>
-      <a href="/org/scf/archive">ARCHIVE</a>
-=======
-      <a href="/org/scf/weekly.html">WEEKLY</a>
-      <a href="/org/scf/retreats.html">RETREATS</a>
-      <a href="/org/scf/history.html">history</a>
-      <a href="/org/scf/archive">ARCHIVE</a>
-      <a href="/org/scf/photos">PHOTOS</a>
->>>>>>> 48836de395cdb2d9be331686769ce227b7071d16
-    </div>
   </div>
-  <!-- End header content -->
 
   <!-- Page content -->
   <div id="content">
-<<<<<<< HEAD
-    <h1>Jump to:</h1>
-    <p><a href="#fall">Fall retreat</a><br>
-      <a href="#spring">Spring plunge</a><br>
-      <a href="#chaptercamp">Chapter camp</a><br>
-      <a href="#urbana">Urbana</a><br>
-    </p>
 
     <a id="fall"></a>
     <p><h1>Fall Retreat</b></p>
@@ -55,19 +43,11 @@
     <p><h1>Urbana Conference</b></p>
     <p>blah</p>
 
-=======
-    <p>
-      blah
-    </p>
-
->>>>>>> 48836de395cdb2d9be331686769ce227b7071d16
   </div>
-  <!-- End page Content -->
 
   <!-- Footer content -->
   <div id="footer">
   </div>
-  <!-- End footer content -->
 
 </body>
 </html>
