--- a/contact.html
+++ b/contact.html
@@ -4,22 +4,26 @@
   <meta http-equiv="Content-Type" content="text/html" charset="UTF-8">
   <title>Contact SCF</title>
   <link rel="stylesheet" type="text/css" href="/org/scf/styles/default.css">
+
+  <!-- Navigation bar -->
+  <script
+      src="https://code.jquery.com/jquery-3.3.1.js"
+      integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+      crossorigin="anonymous">
+  </script>
+
+  <script>
+  $(function(){
+    $("#header").load("header.html");
+    $("#footer").load("footer.html");
+  });
+  </script>
 </head>
 
 <body>
   <!-- Header content -->
   <div id="header">
-    <div id="navigation">
-      <a href="/org/scf/">HOME</a>
-      <a href="/org/scf/about.html">ABOUT</a>
-      <a href="/org/scf/weekly.html">WEEKLY EVENTS</a>
-      <a href="/org/scf/retreats.html">RETREATS</a>
-      <a href="/org/scf/contact.html">CONTACT</a>
-      <a href="/org/scf/photos">PHOTOS</a>
-      <a href="/org/scf/archive">ARCHIVE</a>
-    </div>
   </div>
-  <!-- End header content -->
 
   <!-- Page content -->
   <div id="content">
@@ -37,12 +41,10 @@
 
 
   </div>
-  <!-- End page Content -->
 
   <!-- Footer content -->
   <div id="footer">
   </div>
-  <!-- End footer content -->
 
 </body>
 </html>
