--- a/history.html
+++ b/history.html
@@ -4,32 +4,29 @@
   <meta http-equiv="Content-Type" content="text/html" charset="UTF-8">
   <title>History of SCF</title>
   <link rel="stylesheet" type="text/css" href="/org/scf/styles/default.css">
+
+  <!-- Navigation bar -->
+  <script
+      src="https://code.jquery.com/jquery-3.3.1.js"
+      integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+      crossorigin="anonymous">
+  </script>
+
+  <script>
+  $(function(){
+    $("#header").load("header.html");
+    $("#footer").load("footer.html");
+  });
+  </script>
 </head>
 
 <body>
   <!-- Header content -->
   <div id="header">
-    <div id="navigation">
-      <a href="/org/scf/">HOME</a>
-      <a href="/org/scf/about.html">ABOUT</a>
-      <a href="/org/scf/weekly.html">WEEKLY</a>
-      <a href="/org/scf/retreats.html">RETREATS</a>
-      <a href="/org/scf/history.html">HISTORY</a>
-      <a href="/org/scf/archive">ARCHIVE</a>
-      <a href="/org/scf/photos">PHOTOS</a>
-    </div>
   </div>
-  <!-- End header content -->
 
   <!-- Page content -->
   <div id="content">
-    <!-- <b>Jump to:</b>
-    <p><a href="#who">Who we are</a><br>
-      <a href="#sofaith">Statement of Faith</a><br>
-      <a href="#iv">Affiliation with InterVarsity</a><br>
-      <a href="#history">History</a><br>
-      <a href="#charter">Original charter</a><br>
-    </p> -->
 
     <a id="history"></a>
     <p><h1>HISTORY</h1></p>
@@ -80,12 +77,10 @@
       </p>
 
   </div>
-  <!-- End page Content -->
 
   <!-- Footer content -->
   <div id="footer">
   </div>
-  <!-- End footer content -->
 
 </body>
 </html>
