--- a/index.html
+++ b/index.html
@@ -4,22 +4,26 @@
   <meta http-equiv="Content-Type" content="text/html" charset="UTF-8">
   <title>Swarthmore Christian Fellowship</title>
   <link rel="stylesheet" type="text/css" href="/org/scf/styles/default.css">
+
+  <script
+      src="https://code.jquery.com/jquery-3.3.1.js"
+      integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+      crossorigin="anonymous">
+  </script>
+
+  <script>
+  $(function(){
+    $("#header").load("header.html");
+    $("#footer").load("footer.html");
+  });
+  </script>
+
 </head>
 
 <body>
   <!-- Header content -->
   <div id="header">
-    <div id="navigation">
-      <a href="/org/scf/">HOME</a>
-      <a href="/org/scf/about.html">ABOUT</a>
-      <a href="/org/scf/weekly.html">WEEKLY</a>
-      <a href="/org/scf/retreats.html">RETREATS</a>
-      <a href="/org/scf/history.html">HISTORY</a>
-      <a href="/org/scf/archive">ARCHIVE</a>
-      <a href="/org/scf/photos">PHOTOS</a>
-    </div>
   </div>
-  <!-- End header content -->
 
   <!-- Page content -->
   <div id="content">
@@ -27,11 +31,7 @@
     <h2>hello world</h2>
     <h3>hello world</h3>
 
-    <p>This is website in 2018-2019 school year</p>
-    <p>welcome new freshmen i guess</p>
-    <p>hello 2022</p>
-    <p>goodbye 2019</p>
-    <p>welcome 2 swathmoar!!!1!</p>
+    <p>hello world</p>
   </div>
 
   <div class="Slideshow">
@@ -62,12 +62,10 @@
       <p>April 17, 2017</p>
     </div>
   </div>
-  <!-- End page Content -->
 
   <!-- Footer content -->
   <div id="footer">
   </div>
-  <!-- End footer content -->
 
 
   <!-- carousel script -->
@@ -88,7 +86,6 @@
       setTimeout(carousel, 4000);
   }
   </script>
-  <!-- End carousel script -->
 
 </body>
 </html>
