Better header/footer inheritance

--- a/about.html
+++ b/about.html
@@ -3,14 +3,14 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html" charset="UTF-8">
   <title>About SCF</title>
-  <link rel="stylesheet" type="text/css" href="/org/scf/styles/default.css">
 
-  <!-- Navigation bar -->
+  <!-- insert header from file -->
   <script
       src="https://code.jquery.com/jquery-3.3.1.js"
       integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
       crossorigin="anonymous">
   </script>
+  
   <script>
   $(function(){
     $("#header").load("header.html");
