--- a/header.html
+++ b/header.html
@@ -1,9 +1,17 @@
+<link rel="stylesheet" type="text/css" href="/org/scf/styles/default.css">
+<!-- <link href="https://fonts.googleapis.com/css?family=Karla" rel="stylesheet"> -->
+
+<!-- <div id="logo">
+  <img src="/photos/logo.png" alt="swatcf logo" style="width:100px; height:100px;"></img>
+</div> -->
+
 <div id="navigation">
-  <a href="/org/scf/">HOME</a>
-  <a href="/org/scf/about.html">ABOUT</a>
-  <a href="/org/scf/weekly.html">WEEKLY</a>
-  <a href="/org/scf/retreats.html">RETREATS</a>
-  <a href="/org/scf/history.html">HISTORY</a>
-  <a href="/org/scf/website_archive">ARCHIVE</a>
-  <a href="/org/scf/photos">PHOTOS</a>
+  <!-- TODO: change HOME to logo -->
+  <a class="link-header" href="/org/scf/">HOME</a>
+  <a class="link-header" href="/org/scf/about.html">ABOUT</a>
+  <a class="link-header" href="/org/scf/weekly.html">WEEKLY</a>
+  <a class="link-header" href="/org/scf/retreats.html">RETREATS</a>
+  <a class="link-header" href="/org/scf/history.html">HISTORY</a>
+  <a class="link-header" href="/org/scf/website_archive">ARCHIVE</a>
+  <a class="link-header" href="/org/scf/photos">PHOTOS</a>
 </div>
