--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html" charset="UTF-8">
   <title>Swarthmore Christian Fellowship</title>
-  <link rel="stylesheet" type="text/css" href="/org/scf/styles/default.css">
 
+  <!-- insert header from file -->
   <script
       src="https://code.jquery.com/jquery-3.3.1.js"
       integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
@@ -27,11 +27,7 @@
 
   <!-- Page content -->
   <div id="content">
-    <h1>hello world</h1>
-    <h2>hello world</h2>
-    <h3>hello world</h3>
 
-    <p>hello world</p>
   </div>
 
   <div class="Slideshow">
