--- a/retreats.html
+++ b/retreats.html
@@ -3,9 +3,8 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html" charset="UTF-8">
   <title>Retreats SCF</title>
-  <link rel="stylesheet" type="text/css" href="/org/scf/styles/default.css">
 
-  <!-- Navigation bar -->
+  <!-- insert header from file -->
   <script
       src="https://code.jquery.com/jquery-3.3.1.js"
       integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
@@ -18,6 +17,8 @@
     $("#footer").load("footer.html");
   });
   </script>
+
+</head>
 
 <body>
   <!-- Header content -->
