added Contact to navbar

--- a/contact.html
+++ b/contact.html
@@ -3,9 +3,8 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html" charset="UTF-8">
   <title>Contact SCF</title>
-  <link rel="stylesheet" type="text/css" href="/org/scf/styles/default.css">
 
-  <!-- Navigation bar -->
+  <!-- insert header from file -->
   <script
       src="https://code.jquery.com/jquery-3.3.1.js"
       integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
@@ -18,6 +17,7 @@
     $("#footer").load("footer.html");
   });
   </script>
+
 </head>
 
 <body>
@@ -27,16 +27,21 @@
 
   <!-- Page content -->
   <div id="content">
-    <h1>hello world</h1>
-    <h2>hello world</h2>
-    <h3>hello world</h3>
 
-    Spring 2019
-    <p>Large Group: TBD</p>
-    <p>Open Small Group: </p>
+    <p>Feel free to email us at "username1 at swarthmore dot edu".
+
+    <a id="s19"></a>
+    <p><h1>SPRING 2019</h1></p>
+    <p>
+
+    <p>Large Group: </p>
     <p>Freshmen Small Group: </p>
     <p>Senior Small Group: </p>
     <p>Women's Small Group: </p>
+    <p>Men's Small Group: </p>
+    <p>Open Small Group: </p>
+    <p>Athletes' Small Group: </p>
+    <p>Finance, mailing list: </p>
     <p>Peripateo Journal of Christian Discourse: </p>
 
 
