--- a/header.html
+++ b/header.html
@@ -2,16 +2,24 @@
 <!-- <link href="https://fonts.googleapis.com/css?family=Karla" rel="stylesheet"> -->
 
 <!-- <div id="logo">
-  <img src="/photos/logo.png" alt="swatcf logo" style="width:100px; height:100px;"></img>
+<img src="/photos/logo.png" alt="swatcf logo" style="width:100px; height:100px;"></img>
 </div> -->
 
 <div id="navigation">
   <!-- TODO: change HOME to logo -->
   <a class="link-header" href="/org/scf/">HOME</a>
+  &middot
   <a class="link-header" href="/org/scf/about.html">ABOUT</a>
+  &middot
   <a class="link-header" href="/org/scf/weekly.html">WEEKLY</a>
+  &middot
   <a class="link-header" href="/org/scf/retreats.html">RETREATS</a>
+  &middot
+  <a class="link-header" href="/org/scf/contact.html">CONTACT</a>
+  &middot
   <a class="link-header" href="/org/scf/history.html">HISTORY</a>
+  &middot
   <a class="link-header" href="/org/scf/website_archive">ARCHIVE</a>
+  &middot
   <a class="link-header" href="/org/scf/photos">PHOTOS</a>
 </div>
