Added text and links to Who We Are and Affiliation

--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
       integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
       crossorigin="anonymous">
   </script>
-  
+
   <script>
   $(function(){
     $("#header").load("header.html");
@@ -31,7 +31,7 @@
     <a id="who"></a>
     <p><h1>WHO WE ARE</h1></p>
     <p>
-      Welcome to Swarthmore Christian Fellowship. We are an evangelical, multi-denominational undergraduate campus ministry. We invite you to come learn with us about Christianity and share the Gospel of Jesus Christ with the campus.
+      Welcome to Swarthmore Christian Fellowship. We are an evangelical, multi-denominational undergraduate campus ministry at <a href="https://swarthmore.edu">Swarthmore College</a>. We invite you to come learn with us about Christianity, be transformed by the renewing of your mind (Rom 12:2), and share the Gospel of Jesus Christ with the campus and beyond. You do not have to be Christian to join us!
     </p>
 
     <a id="sofaith"></a>
@@ -78,9 +78,11 @@
     <a id="iv"></a>
     <p><h1>AFFILIATION WITH INTERVARSITY USA</h1></p>
     <p>
-      We are a chapter of <a href="https://intervarsity.org/about-us/our-purpose">InterVarsity Christian Fellowship USA</a>, which is an inter-denominational national organization that is part of the Internationl Fellowship of Evangelical Students. Our statement of faith is inherited from IVCF. We receive mentorship from IVCF and we regularly attend retreats with other IVCF campuses in our region.<br/>
+      We are a chapter of <a href="https://intervarsity.org/about-us/our-purpose">InterVarsity Christian Fellowship USA</a> (IVCF), which is a national inter-denominational organization that is part of the <a hfref="https://live.ifesworld.org/en">Internationl Fellowship of Evangelical Students</a> (IFES). Our <a href="https://intervarsity.org/about-us/what-we-believe">statement of faith</a> is inherited from IVCF.<br/>
       <br/>
-      We are located in <a href="https://ivsubphilly.com/about-us/our-team/">Eastern Pennsylvania</a>, within the <a href="http://midatlantic.intervarsity.org/regional-mission/">Mid-Atlantic region</a>. Our campus staff minister is Ms. Lindsey McAleese, who joined us in Fall 2018.<br/>
+      We receive mentorship from IVCF and we regularly attend <a href="/srv/org/scf/retreats.html">retreats</a> with other IVCF campuses. We are located in the <a href="https://ivsubphilly.com/about-us/our-team/">Eastern Pennsylvania</a> division of the <a href="http://midatlantic.intervarsity.org/regional-mission/">Mid-Atlantic region</a>.<br/>
+      <br/>
+       Our area ministry director is <a href="https://donate.intervarsity.org/donate#14155">Mr. Justin Tibbels</a>, who joined us in Fall 2016. Our current campus staff minister is Mrs. Lindsey McAleese, who joined us in Fall 2018. Previously, our campus staff minister was Mr. Trevor Morse, who joined us from Fall 2009 to Spring 2016.
     </p>
 
   </div>
