Set up parallax design template

--- a/retreats.html
+++ b/retreats.html
@@ -29,20 +29,31 @@
   <div id="content">
 
     <a id="fall"></a>
-    <p><h1>Fall Retreat</b></p>
-    <p>blah</p>
+    <div id="retreats-fall" class="parallax-photo"></div>
+    <div class="parallax-text">
+      <p><h1>Fall Retreat</h1></p>
+      <p>blah</p>
+    </div>
 
     <a id="spring"></a>
-    <p><h1>Spring Retreat</b></p>
-    <p>blah</p>
+    <div id="retreats-spring" class="parallax-photo"></div>
+    <div class="parallax-text">
+      <p><h1>Spring Retreat</h1></p>
+      <p>blah</p>
+    </div>
 
-    <a id="chaptercamp"></a>
-    <p><h1>Chapter Camp</b></p>
-    <p>blah</p>
+    <div id="retreats-chapter" class="parallax-photo"></div>
+    <div class="parallax-text">
+      <p><h1>Chapter Camp</h1></p>
+      <p>blah</p>
+    </div>
 
     <a id="urbana"></a>
-    <p><h1>Urbana Conference</b></p>
-    <p>blah</p>
+    <div id="retreats-urbana" class="parallax-photo"></div>
+    <div class="parallax-text">
+      <p><h1>Urbana Missions Conference</h1></p>
+      <p>blah</p>
+    </div>
 
   </div>
 
