--- a/weekly.html
+++ b/weekly.html
@@ -17,7 +17,6 @@
     $("#footer").load("footer.html");
   });
   </script>
-  
 </head>
 
 <body>
@@ -28,26 +27,40 @@
   <!-- Page content -->
   <div id="content">
 
-    <a id="sg"></a>
-    <p><h1>Small Groups</b></p>
-    <p>blah</p>
-
     <a id="lg"></a>
-    <p><h1>Large Group</b></p>
-    <p>blah</p>
+    <div id="weekly-lg" class="parallax-photo"></div>
+    <div class="parallax-text">
+      <p><h1>Large Group</h1></p>
+      <p>blah</p>
+    </div>
+
+    <a id="sg"></a>
+    <div id="weekly-sg" class="parallax-photo"></div>
+    <div class="parallax-text">
+      <p><h1>Small Groups</h1></p>
+      <p>blah</p>
+    </div>
 
     <a id="pg"></a>
-    <p><h1>Prayer Gathering</b></p>
-    <p>blah</p>
+    <div id="weekly-prayer" class="parallax-photo"></div>
+    <div class="parallax-text">
+      <p><h1>Prayer Gathering</h1></p>
+      <p>blah</p>
+    </div>
 
     <a id="service"></a>
-    <p><h1>Missions Team</b></p>
-    <p>blah</p>
+    <div id="weekly-service" class="parallax-photo"></div>
+    <div class="parallax-text">
+      <p><h1>Missions Team</h1></p>
+      <p>blah</p>
+    </div>
 
     <a id="church"></a>
-    <p><h1>Churches</b></p>
-    <p>blah</p>
-
+    <div id="weekly-church" class="parallax-photo"></div>
+    <div class="parallax-text">
+      <p><h1>Churches</h1></p>
+      <p>blah</p>
+    </div>
   </div>
 
   <!-- Footer content -->
