--- a/index.html
+++ b/index.html
@@ -31,29 +31,29 @@
   </div>
 
   <div class="Slideshow">
-    <img src="/org/scf/photos/16_17/chapter17_tree.jpg" style="width:100%" title="">
-    <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
+    <img src="/org/scf/photos/16_17/chapter17_tree.jpg">
+    <div>
       <p>Chapter Camp 2017</p>
       <p>May 13-19, 2017</p>
     </div>
   </div>
   <div class="Slideshow">
-    <img src="/org/scf/photos/16_17/chapter17_woods.jpg" style="width:100%" title="">
-    <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
+    <img src="/org/scf/photos/16_17/chapter17_woods.jpg">
+    <div>
       <p>Chapter Camp 2017</p>
       <p>May 13-19, 2017</p>
     </div>
   </div>
   <div class="Slideshow">
-    <img src="/org/scf/photos/16_17/banquet17_funny.jpg" style="width:100%" title="">
-    <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
+    <img src="/org/scf/photos/16_17/banquet17_funny.jpg">
+    <div>
       <p>Welcoming Banquet 2017</p>
       <p>March 25, 2017</p>
     </div>
   </div>
   <div class="Slideshow">
-    <img src="/org/scf/photos/16_17/easter17.jpg" style="width:100%" title="">
-    <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
+    <img src="/org/scf/photos/16_17/easter17.jpg">
+    <div>
       <p>Easter Dinner 2017</p>
       <p>April 17, 2017</p>
     </div>
@@ -65,23 +65,7 @@
 
 
   <!-- carousel script -->
-  <script>
-  var index = 0;
-  carousel();
-
-  // changes image every 4 seconds
-  function carousel() {
-      var i;
-      var x = document.getElementsByClassName("Slideshow");
-      for (i = 0; i < x.length; i++) {
-         x[i].style.display = "none";
-      }
-      index++;
-      if (index > x.length) {index = 1} // go back to the first image
-      x[index-1].style.display = "block";
-      setTimeout(carousel, 4000);
-  }
-  </script>
+  <script src="/org/scf/slideshow.js"></script>
 
 </body>
 </html>
